# AutoDoc

./: .gitignore  README.md  pyproject.toml  usage_example.py
AutoDoc/: __init__.py  ai.py  cli.py  config.py  main.py  parser.py  pdf_converter.py  renderer.py  test_generator.py  utils.py
my_project/: my_project.py
tests/: my_project_test.py  test_parser.py
